{
    "name": "MechanicsControl",
    "maps": [
        {
            "name": "Pickup&Drop/Throw",
            "id": "5a512146-4f9b-4683-9d4c-addbe41e86a1",
            "actions": [
                {
                    "name": "PickUp",
                    "type": "Value",
                    "id": "e83ac8a0-e50f-48e0-818d-dce97256171a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Charge",
                    "type": "Value",
                    "id": "5842b043-9761-47ef-b428-0570d00f43fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Throw",
                    "type": "Value",
                    "id": "91bd655b-2630-4084-8f7d-0adec49f3251",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d88fb6df-8d57-42a8-8922-5509c4bb8053",
                    "path": "<Keyboard>/e",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a404322-6873-4c40-8073-838a0b943509",
                    "path": "<Keyboard>/e",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Charge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7bf02dcf-eb8d-4345-a912-b25bb47dba6f",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Trigger",
            "id": "d620e070-d637-4320-8f72-7e2492d330f3",
            "actions": [
                {
                    "name": "InteractButton",
                    "type": "Value",
                    "id": "63439c93-e8ea-4050-ad90-89cd7ce56814",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InteractTimedButton",
                    "type": "Value",
                    "id": "1705e828-7c8e-4418-89ec-87879fd7656d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InteractLever",
                    "type": "Value",
                    "id": "7b6738fc-fcda-455f-ad26-d6e6be78dce2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UseButtons",
                    "type": "Button",
                    "id": "d18916de-bdff-41b8-acfa-dfb203fd5fe4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseLever",
                    "type": "Button",
                    "id": "bc6a99b9-3678-4b7f-95f5-680e8dabd8be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b8691f12-e1b7-4965-b3e8-1d4d74f0b5be",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "InteractButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aaa6847d-4477-4a82-a1b3-d343a1c76df5",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "InteractTimedButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a2c9509-9907-4b63-b811-ba47b738911d",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "InteractLever",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04ce3a80-33ad-4806-8169-c7e7fd882a4c",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UseButtons",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e9e25d4-ed07-4c06-8f0d-8ebafd723bb5",
                    "path": "<Keyboard>/e",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "UseLever",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}